unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Routing_Policy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Routing_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Routing Policy</label>
    <referenceTo>nbavs__CallFlow__c</referenceTo>
    <relationshipLabel>Call Reporting</relationshipLabel>
    <relationshipName>Call_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>