unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_SF_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_SF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From SF User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>From_SFUser</relationshipName>
    <type>Lookup</type>
</CustomField>