unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Solid_Threshold__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Solid_Threshold__c</fullName>
    <defaultValue>1</defaultValue>
    <label>From Solid Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>