unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Start_Time__c</fullName>
    <description>The start time of this interaction. For instance 0, this will be the time the call hits the switch. For instances &gt; 0, will normally be the same as the From_Bridge</description>
    <label>Conversation Start Time</label>
    <type>DateTime</type>
</CustomField>