unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Time_Talking__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Time_Talking__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The time that the From leg of the call spent in a talking state</description>
    <label>Time Talking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>