unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Used_On_Hold_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Used_On_Hold_Seconds__c</fullName>
    <description>The duration in seconds relating to how much time this party placed the other parties on hold</description>
    <label>From Used On Hold Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>