unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__hcro__c.field-meta.xml
<CustomField>
    <fullName>nbavs__hcro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hcro</label>
    <type>Checkbox</type>
</CustomField>