unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Hour__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Hour__c</fullName>
    <description>Hour when the call started</description>
    <formula>HOUR(TIMEVALUE(nbavs__From_Start_Time__c) + (nbavs__UserTimezoneOffset__c * 60 * 60 * 1000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hour when the call started</inlineHelpText>
    <label>Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>