unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Insights_Player__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights_Player__c</fullName>
    <formula>if(NOT(ISBLANK(nbavs__From_UUID__c)),HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/insightsPlayer?uuid=&quot;&amp; nbavs__From_UUID__c , &quot;Click to view Insight&quot;),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Player</label>
    <type>Text</type>
</CustomField>