unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__isDuplicate__c.field-meta.xml
<CustomField>
    <fullName>nbavs__isDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To mark if the CRO record created is duplicate</description>
    <label>isDuplicate</label>
    <type>Checkbox</type>
</CustomField>