unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__JSONString__c.field-meta.xml
<CustomField>
    <fullName>nbavs__JSONString__c</fullName>
    <label>JSON String</label>
    <length>80768</length>
    <type>LongTextArea</type>
</CustomField>