unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Lead__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Call_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>