unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Month_Numeric__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Month_Numeric__c</fullName>
    <description>Numeric representation of month when call started</description>
    <formula>MONTH( DATEVALUE(nbavs__From_Start_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric representation of month when call started</inlineHelpText>
    <label>Month Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>