unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Call_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>