unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Other_Account__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Call_OtherAccount</relationshipName>
    <type>Lookup</type>
</CustomField>