unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Other_Case__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>OtherCaseCallReportings</relationshipName>
    <type>Lookup</type>
</CustomField>