unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Other_Contact__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Call_OtherContact</relationshipName>
    <type>Lookup</type>
</CustomField>