unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Other_Lead__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Call_OtherLead</relationshipName>
    <type>Lookup</type>
</CustomField>