unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Other_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Other_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Call_OtherOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>