unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Solid_Call__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Solid_Call__c</fullName>
    <formula>nbavs__From_Time_Talking__c &gt; nbavs__From_Solid_Threshold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solid Call</label>
    <type>Checkbox</type>
</CustomField>