unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Task__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Task__c</fullName>
    <label>Task</label>
    <type>Url</type>
</CustomField>