unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Answer_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Answer_Time__c</fullName>
    <description>The answer time for this interaction. For instance 0, this will be the time the call really gets answered by either an IVR or a Device. For instances &gt; 0, will normally be the same as the To_Bridge</description>
    <label>To Answer Time</label>
    <type>DateTime</type>
</CustomField>