unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Archive_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Archive_Policy_Id__c</fullName>
    <description>The archiving policy Id of a recording associated with the To leg. If Id is 0, then no recording has been made</description>
    <label>To Archive Policy Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>