unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_AVS_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_AVS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>To_AVSUser</relationshipName>
    <type>Lookup</type>
</CustomField>