unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Analytics__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Analytics__c</fullName>
    <formula>IF(AND(nbavs__To_Flag_Record__c,nbavs__To_Flag_Analytics__c), HYPERLINK(&#39;/apex/nbavs__telemetry?callReportingId=&#39;+Id+&#39;&amp;to&#39;, IMAGE(&quot;/resource/nbavs__playbuttons/TelemetryOn.png&quot;, &quot;Call Analysis&quot;)), IMAGE(&quot;/resource/nbavs__playbuttons/TelemetryOff.png&quot;, &quot;No Recording was made&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Call Analytics</label>
    <type>Text</type>
</CustomField>