unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Category__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Category__c</fullName>
    <description>A call category identifier that identifies the category of this leg of the call</description>
    <label>To Call Category</label>
    <length>32</length>
    <type>Text</type>
</CustomField>