unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Queue_Agent_Serviced__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Queue_Agent_Serviced__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Call Queue Agent Serviced</label>
    <referenceTo>nbavs__Call_Queue__c</referenceTo>
    <relationshipLabel>Call Reporting</relationshipLabel>
    <relationshipName>Call_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>