unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Queue_CallBack_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Queue_CallBack_Number__c</fullName>
    <label>To Call Queue Callback Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>