unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Queue_Last_Disposition__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Queue_Last_Disposition__c</fullName>
    <description>The disposition of the last call queue that the To leg of this call was routed to: TIMEOUT (call queue timed out and call was passed to next item in policy), ANSWERED (call was connected to an agent), ABANDONED (caller pressed a key to exit from the call queue), HANGUP (caller hung up the call whilst still in the call queue)</description>
    <label>To Call Queue Last Disposition</label>
    <length>32</length>
    <type>Text</type>
</CustomField>