unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Queue_Last_Wait_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Queue_Last_Wait_Seconds__c</fullName>
    <description>The duration of time in seconds that the To leg spent waiting to be connected to an agent in the last call queue</description>
    <label>To Call Queue Last Wait Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>