unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Queue_Skills_Shortage_Delay__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Queue_Skills_Shortage_Delay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>To Call Queue Skills Shortage Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>