unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Call_Queue_Total_Wait_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Call_Queue_Total_Wait_Seconds__c</fullName>
    <label>To Call Queue Total Wait Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>