unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Channel_End_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Channel_End_Time__c</fullName>
    <description>The actual hangup time of the physical call regardless of how many times the To leg has been transferred</description>
    <label>To Channel End Time</label>
    <type>DateTime</type>
</CustomField>