unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Channel_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Channel_Start_Time__c</fullName>
    <description>The date and time at which the To channel was initiated.</description>
    <label>To Channel Start Time</label>
    <type>DateTime</type>
</CustomField>