unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Component_Start_DN__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Component_Start_DN__c</fullName>
    <label>To Component Start DN</label>
    <length>64</length>
    <type>Text</type>
</CustomField>