unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Active_Record_Fail__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Active_Record_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg is an active record channel which failed to complete</description>
    <label>To Flag Active Record Fail</label>
    <type>Checkbox</type>
</CustomField>