unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Active_Record_Ok__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Active_Record_Ok__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg is an active record channel which completed Ok</description>
    <label>To Flag Active Record Ok</label>
    <type>Checkbox</type>
</CustomField>