unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Active_Record_Stream_Ok__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Active_Record_Stream_Ok__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg is an active record channel which has been streamed and completed Ok</description>
    <label>To Flag Active Record Stream Ok</label>
    <type>Checkbox</type>
</CustomField>