unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Agent_Hangup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Agent_Hangup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean value indicating where the Agent hung up the call. This is only relevant when the To Leg has a non 0 toUserId value associated with it</description>
    <label>To Flag Agent Hangup</label>
    <type>Checkbox</type>
</CustomField>