unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Analytics__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Flag Analytics</label>
    <type>Checkbox</type>
</CustomField>