unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_CallBack_Requested__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_CallBack_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Flag Callback Requested</label>
    <type>Checkbox</type>
</CustomField>