unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Early_Divert__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Early_Divert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was the subject of a mobile early divert</description>
    <label>To Flag Early Divert</label>
    <type>Checkbox</type>
</CustomField>