unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Eavesdrop__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Eavesdrop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was attached to another call to perform an eavesdrop</description>
    <label>To Flag Eavesdrop</label>
    <type>Checkbox</type>
</CustomField>