unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Late_Divert__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Late_Divert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was the subject of a mobile late divert</description>
    <label>To Flag Late Divert</label>
    <type>Checkbox</type>
</CustomField>