unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Listen_In__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Listen_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Listen In Service activated by the call leg</description>
    <label>To Flag Listen In</label>
    <type>Checkbox</type>
</CustomField>