unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Pickup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was picked up via a group pickup</description>
    <label>To Flag Pickup</label>
    <type>Checkbox</type>
</CustomField>