unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Skills__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Flag Skills</label>
    <type>Checkbox</type>
</CustomField>