unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Virtual_Channel__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Virtual_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Flag Virtual Channel</label>
    <type>Checkbox</type>
</CustomField>