unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Flag_Voicemail_Record__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Flag_Voicemail_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was routed to voicemail</description>
    <label>To Flag Voicemail Record</label>
    <type>Checkbox</type>
</CustomField>