unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Call Reporting (To Group)</relationshipLabel>
    <relationshipName>Call_Reporting1</relationshipName>
    <type>Lookup</type>
</CustomField>