unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Hangup_Cause__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Hangup_Cause__c</fullName>
    <description>The hangup cause on the To leg</description>
    <label>To Hangup Cause</label>
    <length>32</length>
    <type>Text</type>
</CustomField>