unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Instance__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Instance__c</fullName>
    <description>Starting at 0, defines the instance of a Dialogue between the From Leg and the To Leg from the To Leg’s perspective</description>
    <label>To Instance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>