unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Last_Queue__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Last_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Call Queue Last Queue</label>
    <referenceTo>nbavs__Call_Queue__c</referenceTo>
    <relationshipLabel>Call Reporting (To Call Queue Last Queue)</relationshipLabel>
    <relationshipName>Call_Reporting2</relationshipName>
    <type>Lookup</type>
</CustomField>