unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Number__c</fullName>
    <description>The number that that the call was connected to which has been normalized according to Natterbox normalization rules</description>
    <label>To Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>