unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Policy_Start_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Policy_Start_Name__c</fullName>
    <label>To Policy Start Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>