unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Recording_URL__c</fullName>
    <label>To Recording URL</label>
    <type>Url</type>
</CustomField>