unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__To_Routing_Policy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To_Routing_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Routing Policy</label>
    <referenceTo>nbavs__CallFlow__c</referenceTo>
    <relationshipLabel>Call Reporting (To Routing Policy)</relationshipLabel>
    <relationshipName>Call_Reporting1</relationshipName>
    <type>Lookup</type>
</CustomField>